--- a/index.html
+++ b/index.html
@@ -284,6 +284,8 @@ https://templatemo.com/tm-578-first-portfolio
 
                                         <p>Pernah membuat Website Untuk Project Tugas Akhir Kuliah. 
                                         </br>Link Website : <a href="https://sawahsumur.com/" style="color:green">simdesa</a></p>
+                                        <p>Bahasa Pemrogaraman yang digunakan : PHP, CSS, Javascript</p></br>
+                                        <p>Framework yang digunakan : Codeigniter 3 dan Bootstrap</p>
 
                                         <a href="#" class="custom-btn custom-border-btn btn mt-3">lebih Banyak</a>
 
