--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@ https://templatemo.com/tm-578-first-portfolio
                                     <img src="img/foto1.jpg" class="avatar-image img-fluid" alt="">
                                 </div>
 
-                                <h3 class="pt-2 mb-3">Sedikit Tentangku</h3>
+                                <h3 class="pt-2 mb-3">Sedikit Tentang Saya</h3>
 
                                 <p>Haloo! <b>Saya Isul Alifajri.</b> Lulusan Teknik Informatika di Universitas 17 Agustus 1945 Surabaya. Menguasai Microsoft Office Word, Excel, Acces, dan Power Point. Bisa Membuat Website Menggunakan Bahasa Pemrograman PHP, CSS, CI3, dan Bootstrap 4/5. </p>
 
-                                <p>suka jalan-jalan ke tempat yang sepi tapi tenang, seperti ke daerah bebukitan sambil melihat indahnya pemandangan lembah dan luasnya alam.</p>
+                                <p>Suka jalan-jalan ke tempat yang sepi tapi tenang, seperti ke daerah bebukitan sambil melihat indahnya pemandangan lembah dan luasnya alam.</p>
                             </div>
                         </div>
 
@@ -284,8 +284,8 @@ https://templatemo.com/tm-578-first-portfolio
 
                                         <p>Pernah membuat Website Untuk Project Tugas Akhir Kuliah. 
                                         </br>Link Website : <a href="https://sawahsumur.com/" style="color:green">simdesa</a></p>
-                                        <p>Bahasa Pemrogaraman yang digunakan : PHP, CSS, Javascript</p></br>
-                                        <p>Framework yang digunakan : Codeigniter 3 dan Bootstrap</p>
+                                        <p>Bahasa Pemrogaraman yang digunakan : <b>PHP, CSS, Javascript</b></p>
+                                        <p>Framework yang digunakan : <b>Codeigniter 3 dan Bootstrap </b></p>
 
                                         <a href="#" class="custom-btn custom-border-btn btn mt-3">lebih Banyak</a>
 
