--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@ https://templatemo.com/tm-578-first-portfolio
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_3">Services</a>
+                            <a class="nav-link click-scroll" href="#section_3">Projects/Services</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_4">Projects</a>
+                            <a class="nav-link click-scroll" href="#section_4">Skill</a>
                         </li>
 
                         <li class="nav-item">
@@ -267,7 +267,7 @@ https://templatemo.com/tm-578-first-portfolio
                             <div class="section-title-wrap d-flex justify-content-center align-items-center mb-5">
                                 <img src="images/handshake-man-woman-after-signing-business-contract-closeup.jpg" class="avatar-image img-fluid" alt="">
 
-                                <h2 class="text-white ms-4 mb-0">Services</h2>
+                                <h2 class="text-white ms-4 mb-0">Projects/Services</h2>
                             </div>
 
                             <div class="row pt-lg-5">
@@ -372,7 +372,7 @@ https://templatemo.com/tm-578-first-portfolio
                             <div class="section-title-wrap d-flex justify-content-center align-items-center mb-4">
                                 <img src="images/white-desk-work-study-aesthetics.jpg" class="avatar-image img-fluid" alt="">
 
-                                <h2 class="text-white ms-4 mb-0">Projects</h2>
+                                <h2 class="text-white ms-4 mb-0">Skill</h2>
                             </div>
                         </div>
 
@@ -416,6 +416,34 @@ https://templatemo.com/tm-578-first-portfolio
 
                                 <a href="images/projects/true-agency-9Bjog5FZ-oc-unsplash.jpg" class="popup-image">
                                     <img src="images/projects/true-agency-9Bjog5FZ-oc-unsplash.jpg" class="projects-image img-fluid" alt="">
+                                </a>
+                            </div>
+                        </div>
+                        
+                        <div class="col-lg-4 col-md-6 col-12">
+                            <div class="projects-thumb">
+                                <div class="projects-info">
+                                    <small class="projects-tag">Teknisi Jaringan dan Sistem Komputer</small>
+
+                                    <p class="projects-title">Teknisi Madya Jaringan Komputer<p>
+                                </div>
+
+                                <a href="img/sertifikatlsp.jpg" class="popup-image">
+                                    <img src="img/sertifikatlsp.jpg" class="projects-image img-fluid" alt="">
+                                </a>
+                            </div>
+                        </div>
+						
+						<div class="col-lg-4 col-md-6 col-12">
+                            <div class="projects-thumb">
+                                <div class="projects-info">
+                                    <small class="projects-tag">Microsoft Office</small>
+
+                                    <p class="projects-title">Ms Word, Ms Excel, Ms Acces, Power Point</p>
+                                </div>
+
+                                <a href="img/msoffice.jpg" class="popup-image">
+                                    <img src="img/msoffice.jpg" class="projects-image img-fluid" alt="">
                                 </a>
                             </div>
                         </div>
