--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@ https://templatemo.com/tm-578-first-portfolio
                                 <div class="projects-info">
                                     <small class="projects-tag">Website</small>
 
-                                    <!-- <h3 class="projects-title">Simdesa</h3> -->
+                                    <p class="projects-title">Framework Used : Codeigniter 3 dan Bootstrap</p>
                                 </div>
 
                                 <a href="images/projects/true-agency-9Bjog5FZ-oc-unsplash.jpg" class="popup-image">
