--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ https://templatemo.com/tm-578-first-portfolio
                             <div class="section-title-wrap d-flex justify-content-center align-items-center mb-5">
                                 <img src="images/handshake-man-woman-after-signing-business-contract-closeup.jpg" class="avatar-image img-fluid" alt="">
 
-                                <h2 class="text-white ms-4 mb-0">Projects/Services</h2>
+                                <h2 class="text-white ms-4 mb-0">Projects</h2>
                             </div>
 
                             <div class="row pt-lg-5">
@@ -284,8 +284,10 @@ https://templatemo.com/tm-578-first-portfolio
 
                                         <p>Pernah membuat Website Untuk Project Tugas Akhir Kuliah. 
                                         </br>Link Website : <a href="https://sawahsumur.com/" style="color:green">simdesa</a></p>
-                                        <p>Bahasa Pemrogaraman yang digunakan : <b>PHP, CSS, Javascript</b></p>
-                                        <p>Framework yang digunakan : <b>Codeigniter 3 dan Bootstrap </b></p>
+                                        <p>Bahasa Pemrogaraman yang digunakan : <b>PHP, CSS, Javascript</b></br>
+                                        Framework yang digunakan : <b>Codeigniter 3 dan Bootstrap </b></br>
+			                Keamanan: Enkripsi Database dengan AES-256 dan OTP saat proses Aktivasi </br>
+			                Pengujian : SQL Injection, Cross Site Scripting </p>
 
                                         <a href="#" class="custom-btn custom-border-btn btn mt-3">lebih Banyak</a>
 
