--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ https://templatemo.com/tm-578-first-portfolio
 
                 <div class="d-flex align-items-center d-lg-none">
                     <i class="navbar-icon bi-telephone-plus me-3"></i>
-                    <a class="custom-btn btn" href="#section_5">
+                    <a class="custom-btn btn" href="https://wa.me/6282337750357">
                         082337750357
                     </a>
                 </div>
