--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ https://templatemo.com/tm-578-first-portfolio
                 <a href="index.html" class="navbar-brand mx-auto mx-lg-0">Isul Alifajri</a>
 
                 <div class="d-flex align-items-center d-lg-none">
-                    <a href= "https://wa.me/6282337750357"><i class="navbar-icon bi-telephone-plus me-3"></i></a>
+                    <a class="custom-btn btn" href="https://wa.me/6282337750357"><i class="navbar-icon bi-telephone-plus me-3"></i></a>
                     <a class="custom-btn btn" href="#section_5">
                         082337750357
                     </a>
