--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ https://templatemo.com/tm-578-first-portfolio
                 <a href="index.html" class="navbar-brand mx-auto mx-lg-0">Isul Alifajri</a>
 
                 <div class="d-flex align-items-center d-lg-none">
-                    <a class="custom-btn btn" href="https://wa.me/6282337750357"><i class="navbar-icon bi-telephone-plus me-3"></i></a>
+                    <a class="" href="https://wa.me/6282337750357"><i class="custom-btn btn bi-telephone-plus me-3"></i></a>
                     <a class="custom-btn btn" href="#section_5">
                         082337750357
                     </a>
@@ -479,7 +479,7 @@ https://templatemo.com/tm-578-first-portfolio
 
                                         <li class="footer-menu-item"><a href="#" class="footer-menu-link">Berpetualang</a></li>
 
-                                        <li class="footer-menu-item"><a href="#" class="footer-menu-link">Membaca Novel</a></li>
+                                        <li class="footer-menu-item"><a href="#" class="footer-menu-link">Membaca</a></li>
                                     </ul>
 
                                     <strong class="site-footer-title d-block mt-4 mb-3">Stay connected</strong>
