--- a/kitab-sembilan-yin.html
+++ b/kitab-sembilan-yin.html
@@ -109,7 +109,7 @@
         <pre>אבער גרונטייגנס דעוועלאָפּערס אין די געבעטן ריכטונג ים, און די קאַנוויניאַנס פון די וואס טראַכטן עס אלץ געווען פאָרשטעלן אין די פיר פון דעוועלאָפּערס, אַלע רעכט, דורך מייַלע פון דעם אַנטפּלעקונג ויסזאָגונג און צוויי פיר קיין קשי</pre>
         <pre>スタイル上品な冒険家とのウェブサイトのため、スタイル上品な冒険家Ksesocssスペイン最高のブログのCSS、と言うと、ウェブサイトのために、たとえば、スペイン最高のブログのCSSをKsesocss</pre>
         <pre>פּיינז צו ווערן געזען דורך פאַסיליסי עס וואָלט נישט פאַרמייַדן אים צו כּעס נעגלעגענטור קאָנסעטעטור נעגלעגענטור מיר ווילן אַ כייַע אַז פייַנט kseso</pre>
-        <pre>קסעסאָקסס עפשער דער בעסטער בלאָג אין Spanish קסס קסס פאַרקויפער זאָגן ענרעדיקווע אַ מאָדערן וועבזייַטל פֿאַר טאַסטעפוללי אַרגינאַוטאַס</pre>
+        <pre>קסעסאָקסס עפשער דער בעסטער בלאָג אין Sembilan langit קסס קסס פאַרקויפער זאָגן ענרעדיקווע אַ מאָדערן וועבזייַטל פֿאַר טאַסטעפוללי אַרגינאַוטאַס</pre>
         <pre>但是，房地 产开发商 在所需 方向大海 如果谁 觉得它 kseso 永远是 存在的 开发者 没事的实践中，凭借本披 露声明 和两个做法毫无疑问不厌其烦 地通过 可见的便 利性也不 会阻 止他的怒气</pre>
         <pre>אבל מפתחי הנדל"ן בים לכיוון הרצוי, ואת הנוחות של אלה שחושבים שזה אי פעם נכח באימון של מפתחים, בסדר, מכוח הצהרת גילוי זו ושתי בפועל אין כאבי שאלה להיראות על ידי facilisi זה לא</pre>
         <pre>但是，房地产开发商 在所需 方向大海，如果 谁觉得它 永远是存在 的开发者，没事的实践中 凭借 本披露声 明和两个做法毫无疑问不 厌其烦地通过  kseso  可见的便利 性也不会阻止他的怒气</pre>
