--- a/hening-dan-sunyi.html
+++ b/hening-dan-sunyi.html
@@ -21,8 +21,8 @@
                            <div class="hair text-header-first khem"></div>
                            <div class="nail text-header-first khem"></div>
                            <div class="bod text-header-first khem"></div>
-                           <h1 class="text-header-first">BLAN<span>&lt;</span></h1>
-                           <h2 class="text-header-two">BE<sup><b>_</b></sup>UTY &nbsp; LOU<b>\</b>GE</h2>
+                           <h1 class="text-header-first">K<span>a&lt;</span>mu</h1>
+                           <h2 class="text-header-two">K<sup><b>_</b></sup>NA &nbsp; N<b>\</b>GAN</h2>
                        </div>
                    </div>
             </div>
@@ -33,7 +33,7 @@
                     </a>
                 <div class="text-right">
                     <p class="text-holder">
-                        <a href="https://instagram.com/p/Cb11mN4PaKi/?igshid=MTA0ZTI1NzA=" target="_blank" style="color:black">instagram </a>
+                        <a href="hati-kamu" target="_blank" style="color:black">lembah-sunyi</a>
                     </p>
                 </div>
             </div>
