--- a/hening-dan-sunyi.html
+++ b/hening-dan-sunyi.html
@@ -79,7 +79,7 @@
             </div>
             <div class="three-text-2">
                 <div class="three-text1-2">
-                    <h1 class="three-text2-1">RI<sup>_</sup>DU</h1>
+                    <h1 class="three-text2-1">BI<sup>_</sup>RU</h1>
                 </div>                
             </div>
             <div class="three-text-3">
