--- a/hening-dan-sunyi.html
+++ b/hening-dan-sunyi.html
@@ -44,9 +44,11 @@
         <!-- <div class="flower"> -->
             <header>
                 <div class="fixed-1">
-                    <div class="icon">
-                        <a href=""><img src="images/icon.png" alt="icon" class="icon-img"></a>
-                      
+                    <div class="sunyi">
+                        <a href="kamu"><label class="ms-u"> 
+                            Tidak mengabari bukan berarti tidak peduli...
+                            Tidak menghubungimu bukan berarti tidak merindukanmu... ~ hening, sunyi, sepi dan rindu ~
+                        </label></a>
                     </div>
                     <p class="services-cta"><a href="hening.html">
                         Hening
@@ -84,7 +86,7 @@
             </div>
             <div class="three-text-3">
                 <div class="three-text1-2">
-                    <h1 class="three-text3-1">LAn<hu>/</hu>GIT</h1>
+                    <h1 class="three-text3-1">LAN<hu>/</hu>GIT</h1>
                 </div>                
             </div>
             <label for="you">Edited By Isul AF</label> <b>想你 </b>
