--- a/hening-dan-sunyi.html
+++ b/hening-dan-sunyi.html
@@ -32,7 +32,7 @@
                         <img src="icons/icons-down-arrow-32.png" class="fa">
                     </a>
                 <div class="text-right">
-                    <p class="text-holder">
+                    <p class="text-night">
                         <a href="hati-kamu" target="_blank" style="color:black">lembah-sunyi</a>
                     </p>
                 </div>
