--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                                         <p>Membuat Website Sistem Informasi Manajemen Desa. Untuk informasi Lebih lanjut tentang website ini silahkan klik <b>lihat selengkapnya.</b>
                                         <!-- </br>Link Website : <a href="https://sawahsumur.com/" style="color:green">simdesa</a></p> -->
 
-                                        <a href="project/project-1.html" target="_blank" class="custom-btn custom-border-btn btn mt-3">lihat selengkapnya</a>
+                                        <p><a href="project/project-1.html" target="_blank" class="custom-btn custom-border-btn btn mt-3">lihat selengkapnya</a></p>
 
                                         <div class="services-icon-wrap d-flex justify-content-center align-items-center">
                                             <i class="services-icon bi-globe"></i>
