--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                                 <div class="projects-info">
                                     <small class="projects-tag">Website</small>
 
-                                    <p class="projects-title">Framework Used : Codeigniter v3, Laravel v8 dan Bootstrap</p>
+                                    <p class="projects-title">Framework Used : Codeigniter v3 laravel v8 dan Bootstrap</p>
                                 </div>
 
                                 <a href="./img/develop-web.jpg" class="popup-image">
