--- a/project/project-1.html
+++ b/project/project-1.html
@@ -49,7 +49,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <a href="index.html" class="navbar-brand mx-auto mx-lg-0">Isul Alifajri</a>
+                <a href="../index.html" class="navbar-brand mx-auto mx-lg-0">Isul Alifajri</a>
 
                 <div class="d-flex align-items-center d-lg-none" onclick="redirEmail()" style="cursor:pointer;">
                     <i class="navbar-icon bi-envelope me-3" id="tooltip" title="Send Email"></i>
@@ -79,7 +79,7 @@
                     </ul>
 
                     <div class="d-lg-flex align-items-center d-none ms-auto">
-                        <a class=""  href="mailto:isulalifajri@gmail.com" id="tooltip1" data title="Send Email">
+                        <a class=""  href="mailto:isulalifajri@gmail.com" id="tooltip1" title="Send Email">
                                 <i class="custom-btn btn bi-envelope me-3 cuyy"></i>
                         </a>
                         <div class="d-flex align-items-center d-lg-none">
@@ -97,7 +97,7 @@
                 <div class="container">
                     <div class="row">
                         
-                        <div class="col-lg-6 col-12 mt-5 mt-lg-0">
+                        <div class="col-lg-6 col-12 mt-5 mt-lg-0"  style="margin-bottom:20px;">
                             <div class="about-thumb">
 
                                 <div class="section-title-wrap d-flex justify-content-end align-items-center mb-4 scrolled fade-in-top buble">
@@ -127,7 +127,10 @@
                                         <li>Data-data penting dalam database di sistem ini di enkripsi dengan Algoritma AES-256</li>
                                         <li>Terdapat fitur Autentifikasi dengan OTP melalui WhatsApp Gateway.</li>
                                      </ul>
-                                    <p><strong>Sistem Informasi Manajemen Desa</strong></p>
+                                    <p><strong>Dokumentasi :</strong>
+                                    <a class="code"  href="https://github.com/isulalifajri/codeigniter-3-simdesa" target="_blank" id="tooltip1" title="private">
+                                        <img src="../icons-programs/github.png" class="hover-code" alt="">
+                                    </a></p>
                                 </div>
                             </div>
                         </div>
