--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         
     </head>
     
+<!--     <body oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;"> -->
     <body class="bg-2">
 
         <section class="preloader">
