--- a/project/project-2.html
+++ b/project/project-2.html
@@ -109,7 +109,7 @@
                                 <h3 class="card-1 pt-2 mb-3 scrolled slide-right">About Web</h3>
 
                                 <div class="card-2 scrolled fade-in-bottom font">
-                                    <label><strong>Bahasa Pemrograman dan Database :</strong></label>
+                                    <label class="mt-3"><strong>Bahasa Pemrograman dan Database :</strong></label>
                                      <ul>
                                         <li>PHP 8.0.9</li>
                                         <li>Javascript</li>
