--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <meta name="description" content="">
-        <meta name="author" content="TemplateMo">
+        <meta name="description" content="Portofolio Isul Alifajri Izul Alifajri">
+        <meta name="keywords" content="Portofolio Isul Alifajri Izul Alifajri" />
+        <meta name="author" content="isulalifajri Isul Alifajri Izul Alifajri">
+        <link rel="canonical" href="https://isulalifajri.github.io/" />
 
         <title>Selamat Datang di Portofolio Isul Alifajri</title>
+
 
         <!-- Icon Portofolio -->
         <link href="img/heningsunyi.jpg" rel="icon">
@@ -100,7 +103,7 @@
                         <div class="col-lg-7 col-12">
                             <div class="hero-text">
                                 <div class="hero-title-wrap d-flex align-items-center mb-4">
-                                    <img src="img/foto.jpeg" class="avatar-image avatar-image-large img-fluid" alt="">
+                                    <img src="img/foto.jpeg" class="avatar-image avatar-image-large img-fluid" alt="Isul Alifajri">
 
                                     <h1 class="hero-title ms-3 mb-0 cuyss">Hello!</h1>
                                 </div>
