--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="keywords" content="Portofolio Isul Alifajri Izul Alifajri" />
         <meta name="author" content="isulalifajri Isul Alifajri Izul Alifajri">
         <link rel="canonical" href="https://isulalifajri.github.io/" />
+        <meta name="google-site-verification" content="Website Portofolio isulalifajri Isul Alifajri Izul Alifajri">
 
         <title>Selamat Datang di Portofolio Isul Alifajri</title>
 
