--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 
         <!-- Icon Portofolio -->
-        <link href="img/heningsunyi.jpg" rel="icon">
-        <link href="img/heningsunyi.jpg" rel="apple-touch-icon">
+        <link href="img/heningsunyi.png" rel="icon">
+        <link href="img/heningsunyi.png" rel="apple-touch-icon">
 
         <!-- CSS FILES -->
         <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
