--- a/hening-dan-sunyi.html
+++ b/hening-dan-sunyi.html
@@ -33,7 +33,7 @@
                     </a>
                 <div class="text-right">
                     <p class="text-night">
-                        <a href="hati-kamu" target="_blank" style="color:black">lembah-sunyi</a>
+                        <a href="hati-kamu" target="_blank" style="color:black">hening&sunyi</a>
                     </p>
                 </div>
             </div>
@@ -70,26 +70,25 @@
                    Biarlah Kenangan Indah Itu Abadi dalam Hati, dan Bersemayam selamanya di sana...
                 </p>
                 <p class="three-text-p">
-                    Aku Masih di sini di pinggir hatimu..
-                    Menanti Senyummu Bidadari... ~ Hening dan Sunyi ~
+                    Tertutup tapi tak terkunci, menanti rindu menemui sunyi...
                     Berada dalam Kesunyian Berselimut Rindu.. ~ Lembah Kerinduan ~
                 </p>
                 <p class="three-text-p">
-                   Bermain Bersama Senja,, Menepi Dari Keramaian Dunia.. Dalam Keheningan Mencari Ketenangan,,
+                   Bermain Bersama Senja, Menepi Dari Keramaian Dunia.. Dalam Keheningan Mencari Ketenangan,,
                    ~ Penikmat Pemandangan Indah di Semesta Alam ~ 
                 </p>
             </div>
             <div class="three-text-2">
                 <div class="three-text1-2">
-                    <h1 class="three-text2-1">BI<sup>_</sup>RU</h1>
+                    <h1 class="three-text2-1">Berjalan dalam keheningan malam dibawah naungan bintang dan rembulan...</h1>
                 </div>                
             </div>
             <div class="three-text-3">
                 <div class="three-text1-2">
-                    <h1 class="three-text3-1">LAN<hu>/</hu>GIT</h1>
+                    <h1 class="three-text3-1">我愛你在我的想像中</h1>
                 </div>                
             </div>
-            <label for="you">Edited By Isul AF</label> <b>想你 </b>
+            <label for="you">Edited By Isul AF</label> <b>想你</b>
         </div>
     </div>
 
@@ -144,7 +143,6 @@
             <div class="footer-3">
                 <div class="icon-footer3">
                     <a href="#" target="_blank" >
-                        <!-- <div class="footer-cta3">Designed by Hue Studio</div> -->
                         <div class="footer-cta3">
                             <p>D</p><p>e</p><p>s</p><p>i</p><p>g</p><p>n</p><p>e</p><p>d</p>&nbsp;<p>b</p><p>y</p>
                             &nbsp;<p>H</p><p>u</p><p>e</p>&nbsp;<p>S</p><p>t</p><p>u</p><p>d</p><p>i</p><p>o</p>
