--- a/project/project-2.html
+++ b/project/project-2.html
@@ -124,10 +124,14 @@
                                      </ul>
                                     <label><strong>Fitur-Fitur :</strong></label>
                                      <ul>
-                                        <li>Pada halaman utama menampilkan beberapa hal yang berhubungan dengan website dan pada halaman service menampilkan
-                                            category style serta variant dan harganya dalam bentuk accordion. </li>
-                                        <li>Pada halaman backend terdapat CRUD category dan variant style yang di akan di tampilkan pada halaman utama, ada juga
-                                            edit password, edit profile profile, dll.</li>
+                                        <li>Responsive Page</li>
+                                        <li>Accordion Page Services</li>
+                                        <li>Hero Image</li>
+                                        <li>Galery Image Columns</li>
+                                        <li>Log in</li>
+                                        <li>Setelan</li>
+                                        <li>CRUD</li>
+                                        <li>Modal</li>
                                      </ul>
                                     <p><strong>Dokumentasi :</strong>
                                     <a class="code"  href="https://github.com/isulalifajri/barbershop-laravel" target="_blank" id="tooltip1" title="private">
