--- a/project/project-3.html
+++ b/project/project-3.html
@@ -128,6 +128,7 @@
 
                         <div class="col-lg-6 col-12 scrolled slide-left" style="cursor:pointer;">
                             <h3 class="card-1 pt-2 mb-3 scrolled slide-left">User Interface</h3>
+                            <label class="card-1" style="font-size: 12px;font-family: 'Poppins';"><b>Noted: </b>Tampilan Image Slider ini juga menggunakan <em>fslightbox cdn</em>. jadi, jika ingin melihat detail image, silahkan klik image tersebut. </label>
                             <div class="swiper swiper1" style="margin-bottom:20px;">
                                 <div class="swiper-wrapper">
                                     <a data-fslightbox href="../project-images3/project-3-img1.png" class="swiper-slide text-center"><img src="../project-images3/project-3-img1.png" class="img-fluid" alt=""></a>
