--- a/project/project-3.html
+++ b/project/project-3.html
@@ -119,9 +119,13 @@
                                         <li>CRUD Favorite To Local Storage</li>
                                      </ul>
                                     <p><strong>Dokumentasi :</strong>
-                                    <a class="code"  href="https://github.com/isulalifajri/website-dekorasi-pernikahan" target="_blank" id="tooltip1" title="private">
-                                        <img src="../icons-programs/github.png" class="hover-code" alt="">
-                                    </a></p>
+                                        <a class="code"  href="https://youtu.be/1bb9KVwRf5o" target="_blank">
+                                            <img src="../icons-programs/youtube.png" class="hover-code" alt="">
+                                        </a>
+                                        <a class="code"  href="https://github.com/isulalifajri/website-dekorasi-pernikahan" target="_blank" id="tooltip1" title="private">
+                                            <img src="../icons-programs/github.png" class="hover-code" alt="" style="transform: scale(1.4);">
+                                        </a>
+                                    </p>
                                 </div>
                             </div>
                         </div>
