--- a/hening.html
+++ b/hening.html
@@ -12,6 +12,8 @@
 </head>
 <body>
 
+
+<div class="this-mystory">
     <div class="title-story">
         <div class="intro-section">
             <div class="text-night">
@@ -24,23 +26,24 @@
 
     <div class="the-story">
         <!-- <div class="flower"> -->
-            <div class="just-a-story">
-                <h1>
-                    Di sebuah pegunungan yang sunyi, dalam kegelapan malam yang melingkupi langit, duduk sepasang manusia
-                    di atas sebuah batu besar sambil memandang langit yang kelam, sesekali angin berhembus menerpa keduanya,
-                    tidak ada yang bersuara dari mereka, mereka seolah-olah menikmati suasana langit yang gelap tanpa 
-                    bintang dan rembulan, sesekali terdengar suara binatang malam yang memecah kesunyian di malam itu,
-                    setelah itu sunyi lagi, entah akan berapa lama keduanya dalam kesunyian, sementara waktu terus berjalan,
-                    malam semakin sunyi dan langit semakin kelam.. "Bukankah aneh malam ini, kita berdua di sini, tapi tidak
-                    ada seorang pun diantara kita yang memulai untuk bicara, jika kita terus seperti ini, bukankah kita tidak ada 
-                    bedanya dengan kelamnya langit dan sunyinya pegunungan ini, heyy.. setelah beberapa purnama kita tidak pernah bertemu, 
-                    aku rasa banyak yang ingin kau ceritakan kepadaku. jadi, ceritakanlah ceritamu sekarang, aku ingin mendengarnya",
-                    tiba-tiba salah seorang dari mereka berbicara sambil memandang seseorang yang ada di sampingnya, orang yang dipandang
-                    kemudian juga memandangnya, ada setitik senyum di sudut bibirnya, rambutnya tergerai indah bagaikan kain sutra 
-                    yang lembut yang sesekali melambai karena hembusan angin malam... 
-                    ~ Bersambung.. 😊😊~
-                </h1>
-            </div>
+        <div class="just-a-story">
+            <h1>
+                Di sebuah pegunungan yang sunyi, dalam kegelapan malam yang melingkupi langit, duduk sepasang manusia di 
+                atas sebuah batu besar sambil memandang langit yang kelam, sesekali angin berhembus menerpa keduanya, 
+                tidak ada yang bersuara dari mereka, mereka seolah-olah menikmati suasana langit yang gelap tanpa 
+                bintang dan rembulan, sesekali terdengar suara binatang malam yang memecah kesunyian di malam itu, setelah
+                itu sunyi lagi, entah akan berapa lama keduanya dalam kesunyian, sementara waktu terus berjalan, malam 
+                semakin sunyi dan langit semakin kelam.. 
+                "Bukankah aneh malam ini, kita berdua di sini, tapi tidak ada seorang pun diantara kita yang memulai untuk 
+                bicara, jika kita terus seperti ini, bukankah kita tidak ada bedanya dengan kelamnya langit dan sunyinya 
+                pegunungan ini, heyy.. setelah beberapa purnama kita tidak pernah bertemu, aku rasa banyak yang ingin kau 
+                ceritakan kepadaku. jadi, ceritakanlah ceritamu sekarang, aku ingin mendengarnya". Tiba-tiba salah seorang
+                dari mereka berbicara sambil memandang seseorang yang ada di sampingnya, orang yg dipandang kemudian juga
+                memandangnya, ada setitik senyum di sudut bibirnya, rambutnya tergerai indah bagaikan kain sutra yg lembut
+                yang sesekali melambai karena hembusan angin malam... 
+                ~ Bersambung.. 😊😊~
+            </h1>
+        </div>
         <!-- </div> -->
     </div>
 
@@ -60,18 +63,21 @@
                     <h1>Berjalan dalam keheningan malam dibawah naungan bintang dan rembulan...</h1>
                 </div>                
             </div>
-            <div class="letters">
-                <div class="soul-whisper">
-                    <h1 class="8-letters">我在想像中愛你，我每晚都想念你</h1>
-                    <!-- <a href="kamu"><label class="ms-u"> 
-                        Tidak mengabari bukan berarti tidak peduli...
-                        Tidak menghubungimu bukan berarti tidak merindukanmu... ~ hening, sunyi, sepi dan rindu ~
-                    </label></a> -->
-                </div>                
-            </div>
-            <label for="you">Edited By Isul AF</label> <b>想你</b>
         </div>
+        <div class="letters">
+            <div class="soul-whisper">
+                <h1 class="8-letters">我在想像中愛你，我每晚都想念你</h1>
+                <!-- <a href="kamu"><label class="ms-u"> 
+                    Tidak mengabari bukan berarti tidak peduli...
+                    Tidak menghubungimu bukan berarti tidak merindukanmu... ~ hening, sunyi, sepi dan rindu ~
+                </label></a> -->
+            </div>                
+        </div>
+        <label for="you">Edited By Isul AF</label> <b>想你</b>
     </div>
+</div>
+
+
     <div class="parallax five">
         <div class="five-one">
               <div class="five-img1">
