--- a/hening.html
+++ b/hening.html
@@ -27,7 +27,7 @@
     <div class="the-story">
         <!-- <div class="flower"> -->
         <div class="just-a-story">
-            <h1>
+            <p class="story-night">
                 Di sebuah pegunungan yang sunyi, dalam kegelapan malam yang melingkupi langit, duduk sepasang manusia di 
                 atas sebuah batu besar sambil memandang langit yang kelam, sesekali angin berhembus menerpa keduanya, 
                 tidak ada yang bersuara dari mereka, mereka seolah-olah menikmati suasana langit yang gelap tanpa 
@@ -42,7 +42,7 @@
                 memandangnya, ada setitik senyum di sudut bibirnya, rambutnya tergerai indah bagaikan kain sutra yg lembut
                 yang sesekali melambai karena hembusan angin malam... 
                 ~ Bersambung.. 😊😊~
-            </h1>
+            </p>
         </div>
         <!-- </div> -->
     </div>
