--- a/hening.html
+++ b/hening.html
@@ -53,18 +53,20 @@
                 <p class="in-heart">
                    Biarlah Kenangan Indah Itu Abadi dalam Hati, dan Bersemayam selamanya di sana...
                 </p>
-                <p class="sandykala-nan-kirana">
+                <p class="twilight-and-silence">
                    Bermain Bersama Senja, Menepi Dari Keramaian Dunia.. Dalam Keheningan Mencari Ketenangan,,
                    ~ Penikmat Pemandangan Indah di Semesta Alam ~ 
                 </p>
             </div>
             <div class="silence-of-the-night">
                 <div class="at-night">
-                    <h1>Berjalan dalam keheningan malam dibawah naungan bintang dan rembulan...</h1>
+                    <h1>Ada perasaan rindu di separuh malam yang sepi, saat semua orang sedang terlelap,
+                        sementara aku disini masih bersama rindu berteman sunyi...</h1>
+                    <!-- <h2>Berjalan dalam keheningan malam dibawah naungan bintang dan rembulan...</h2> -->
                 </div>                
             </div>
         </div>
-        <div class="letters">
+        <div class="secret-letters">
             <div class="soul-whisper">
                 <h1 class="8-letters">我在想像中愛你，我每晚都想念你</h1>
                 <!-- <a href="kamu"><label class="ms-u"> 
