--- a/hening.html
+++ b/hening.html
@@ -61,7 +61,7 @@
             <div class="silence-of-the-night">
                 <div class="at-night">
                     <h1>Ada perasaan rindu di separuh malam yang sepi, saat semua orang sedang terlelap,
-                        sementara aku disini masih bersama rindu berteman sunyi...</h1>
+                        sementara aku disini masih bersama rindu berteman sunyi.</h1>
                     <!-- <h2>Berjalan dalam keheningan malam dibawah naungan bintang dan rembulan...</h2> -->
                 </div>                
             </div>
